soonersetc.com (archived on 2010-08-01)
{
  "alexa_rank": 368573,
  "analysis_subcorpus": true,
  "categories": "entertainment;sports",
  "char_count": 3342,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.0,
  "homepage_snapshot_redirected_domain": "soonersetc.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100819081126id_/http://www.soonersetc.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100819081126id_/http%3A//soonersetc.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "soonersetc.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100801092052id_/http%3A//www.soonersetc.com/component/content/article/199.html",
  "policy_title": "Privacy Policy",
  "policy_url": "soonersetc.com/component/content/article/199.html",
  "sha1": "c9f50bb0ad9018cfeed8ad89cf995906e3f7990e",
  "simhash": 14692831127994105490,
  "simhash_updated": false,
  "site_hostname": "soonersetc.com",
  "site_url": "http://soonersetc.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100801092052",
  "word_count": 539,
  "year": 2010
}

--- a/s/so/soo/soonersetc.com.html
+++ b/s/so/soo/soonersetc.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the soonersetc.com privacy policy that was archived on 2010-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100628230817id_/http%3A//www.soonersetc.com/component/content/article/199.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the soonersetc.com privacy policy that was archived on 2010-08-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100801092052id_/http%3A//www.soonersetc.com/component/content/article/199.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb"><head>
   <base href="http://www.soonersetc.com/component/content/article/199.html">
@@ -55,7 +55,7 @@ window.google_analytics_uacct = "UA-346533-6";
 						<table cellspacing="0" cellpadding="0" style="float: left;">
 							<tbody><tr>
 								<td>
-									<ul id="mainlevel-nav"><li><a href="/home.html" class="mainlevel-nav">Home</a></li><li><a href="http://www.soonersetc.com/b12news.html" class="mainlevel-nav">Big 12 &amp; Other News</a></li><li><a href="http://www.soonersetc.com/mensnews.html" class="mainlevel-nav">Men's BB News</a></li><li><a href="http://www.soonersetc.com/womensbbnews.html" class="mainlevel-nav">Women's BB News</a></li><li><a href="/blog.html" class="mainlevel-nav">Blog</a></li><li><a href="http://headline-news.soonersetc.com" target="_blank" class="mainlevel-nav">OU Sports News 24/7</a></li><li><a href="/aboutus.html" class="mainlevel-nav">&nbsp;</a></li><li><a href="/contact.html" class="mainlevel-nav">&nbsp;</a></li></ul>
+									<ul id="mainlevel-nav"><li><a href="/home.html" class="mainlevel-nav">Home</a></li><li><a href="http://www.soonersetc.com/b12news.html" class="mainlevel-nav">Big 12 &amp; Other News</a></li><li><a href="http://www.soonersetc.com/mensnews.html" class="mainlevel-nav">Men's BB News</a></li><li><a href="http://www.soonersetc.com/womensbbnews.html" class="mainlevel-nav">Women's BB News</a></li><li><a href="/blog.html" class="mainlevel-nav">Blog</a></li><li><a href="http://www.soonersetc.com/headline-news/index.html" target="_blank" class="mainlevel-nav">OU Sports News 24/7</a></li><li><a href="/aboutus.html" class="mainlevel-nav">&nbsp;</a></li><li><a href="/contact.html" class="mainlevel-nav">&nbsp;</a></li></ul>
 								</td>
 							</tr>
 						</tbody></table>
@@ -79,21 +79,12 @@ window.google_analytics_uacct = "UA-346533-6";
 				
 					<div id="content">
 													<div id="leftcolumn">	
-										<div class="module_menu">
-			<div>
-				<div>
-					<div>
-													<h3>OU Blogs</h3>
-											<ul class="menu"><li class="item160"><a href="http://soonersnews.com" target="_blank"><span>SoonersNews.com</span></a></li><li class="item63"><a href="http://www.crimsonandcreammachine.com" target="_blank"><span>Crimson and Cream Machine</span></a></li><li class="item158"><a href="http://www.windmilltilting.com" target="_blank"><span>Tilting at Windmills</span></a></li><li class="item174"><a href="http://boomershimko.wordpress.com" target="_blank"><span>Boomer Shimko</span></a></li><li class="item175"><a href="http://www.blatanthomerism.com/" target="_blank"><span>Blatant Homerism</span></a></li></ul>					</div>
-				</div>
-			</div>
-		</div>
-			<div class="module">
+										<div class="module">
 			<div>
 				<div>
 					<div>
 													<h3>OU Forums</h3>
-											<ul class="menu"><li class="item172"><a href="http://www.soonertimesbb.com/forums/view_forum.php?id=2" target="_blank"><span>Sooner Times</span></a></li><li class="item173"><a href="http://www.soonerfans.com/forums/forumdisplay.php?f=2" target="_blank"><span>SoonerFans.com</span></a></li></ul>					</div>
+											<ul class="menu"><li class="item241"><a href="http://mbd.scout.com/mb.aspx?s=146" target="_blank"><span>The Schooner (Sooners Illus.)</span></a></li><li class="item172"><a href="http://www.soonertimesbb.com/forums/view_forum.php?id=2" target="_blank"><span>Sooner Times</span></a></li><li class="item173"><a href="http://www.soonerfans.com/forums/forumdisplay.php?f=2" target="_blank"><span>SoonerFans.com</span></a></li></ul>					</div>
 				</div>
 			</div>
 		</div>
@@ -102,7 +93,7 @@ window.google_analytics_uacct = "UA-346533-6";
 				<div>
 					<div>
 													<h3>Sportspage QuikLinks</h3>
-											<ul class="menu"><li class="item146"><a href="http://newsok.com/sports/ou" target="_blank"><span>The Oklahoman</span></a></li><li class="item147"><a href="http://www.tulsaworld.com/sportsextra/OU/" target="_blank"><span>Tulsa World</span></a></li><li class="item148"><a href="http://www.normantranscript.com/ousports" target="_blank"><span>The Norman Transcript</span></a></li><li class="item181"><a href="http://www.examiner.com/x-17604-Oklahoma-Sooners-Examiner" target="_blank"><span>Oklahoma Sooners Examiner</span></a></li><li class="item149"><a href="http://oudaily.com/news/sports" target="_blank"><span>The Oklahoma Daily</span></a></li><li class="item150"><a href="http://collegesportsblog.dallasnews.com/" target="_blank"><span>The Dallas Morning News</span></a></li><li class="item151"><a href="http://www.star-telegram.com/288/index.html" target="_blank"><span>Fort Worth Star-Telegram</span></a></li></ul>					</div>
+											<ul class="menu"><li class="item146"><a href="http://newsok.com/sports/ou" target="_blank"><span>The Oklahoman</span></a></li><li class="item147"><a href="http://www.tulsaworld.com/sportsextra/OU/" target="_blank"><span>Tulsa World</span></a></li><li class="item148"><a href="http://www.normantranscript.com/ousports" target="_blank"><span>The Norman Transcript</span></a></li><li class="item149"><a href="http://oudaily.com/news/sports" target="_blank"><span>The Oklahoma Daily</span></a></li><li class="item150"><a href="http://collegesportsblog.dallasnews.com/" target="_blank"><span>The Dallas Morning News</span></a></li><li class="item151"><a href="http://www.star-telegram.com/288/index.html" target="_blank"><span>Fort Worth Star-Telegram</span></a></li></ul>					</div>
 				</div>
 			</div>
 		</div>
@@ -111,7 +102,7 @@ window.google_analytics_uacct = "UA-346533-6";
 				<div>
 					<div>
 													<h3>Ticket Outlets</h3>
-											<ul class="menu"><li class="item103"><a href="http://www.jdoqocy.com/click-2615769-10282122" target="_blank"><span>StubHub</span></a></li><li class="item211"><a href="http://www.TicketCity.com" target="_blank"><span>TicketCity</span></a></li><li class="item205"><a href="http://www.ticketnetwork.com/default.aspx?img=88&amp;kbid=3251" target="_blank"><span>TicketNetwork</span></a></li><li class="item208"><a href="http://www.ticketsnow2.com/b.asp?id=15376" target="_blank"><span>TicketsNow</span></a></li></ul>					</div>
+											<ul class="menu"><li class="item240"><a href="http://www.shareasale.com/r.cfm?b=178204&amp;u=434116&amp;m=22490&amp;urllink=&amp;afftrack=" target="_blank"><span>Awesome Seating</span></a></li><li class="item103"><a href="http://www.jdoqocy.com/click-2615769-10282122" target="_blank"><span>StubHub</span></a></li><li class="item211"><a href="http://www.TicketCity.com" target="_blank"><span>TicketCity</span></a></li><li class="item205"><a href="http://www.ticketnetwork.com/default.aspx?img=88&amp;kbid=3251" target="_blank"><span>TicketNetwork</span></a></li><li class="item208"><a href="http://www.ticketsnow2.com/b.asp?id=15376" target="_blank"><span>TicketsNow</span></a></li></ul>					</div>
 				</div>
 			</div>
 		</div>
@@ -240,6 +231,7 @@ window.google_analytics_uacct = "UA-346533-6";
 
 <p>Further information pertaining to privacy and legal issues can be viewed <a href="http://www.securityfocus.com/columnists/450">here</a>.</p>
 
+
 			<table align="center" class="pagenav">
 			<tbody><tr>
 				<th class="pagenav_prev">
@@ -296,10 +288,10 @@ google_ad_height = 600;
 </script>
 </center>
 <img src="/images/spacer.gif" width="178" height="2" border="0" alt="">
-
+<br><br>
 <center>
 <!--wunderground-->
-
+<a href="http://secure.hostgator.com/~affiliat/cgi-bin/affiliates/clickthru.cgi?id=bashorney1-" target="_blank"><img src="http://tracking.hostgator.com/img/Shared_Yellow/125x125-animated.gif" border="0" width="125" height="125" alt="HostGator"></a>
 </center><div class="clr"></div>
 	</div>
 
