--- a/r/ra/rap/rapid8.com.html
+++ b/r/ra/rap/rapid8.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rapid8.com privacy policy that was archived on 2010-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100629001359id_/http%3A//www.rapid8.com/pp.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rapid8.com privacy policy that was archived on 2010-08-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100801110846id_/http%3A//www.rapid8.com/pp.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -67,7 +67,7 @@ table.lastdl td {
 <a href="last10.php" target="_blank">Last 10 Downloads</a>
 <a href="checker.php" target="_blank">Link Check</a>
 <a href="premium.php" target="_blank">Premium</a></div>
-<img src="images/logowc10.jpg" alt="Rapid8.Com | MegaUpload RapidShare Premium Link Generator. Direct Download">
+<img src="images/logo2.jpg" alt="Rapid8.Com | MegaUpload RapidShare Premium Link Generator. Direct Download">
 <!-- <img src="images/logo2.jpg" />//--><br>
 <div id="box"><center>
 </center>
@@ -92,7 +92,7 @@ var AdBrite_Border_Color = 'FFFFFF';
 var AdBrite_URL_Color = '000000';
 try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
 </script>
-<script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=1131542&zs=3330305f323530&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=1131542&amp;zs=3330305f323530&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20100629001359id_%2Fhttp%253A%2F%2Fwww.rapid8.com%2Fpp.php" type="text/javascript"></script>
+<script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=1131542&zs=3330305f323530&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=1131542&amp;zs=3330305f323530&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20100801110846id_%2Fhttp%253A%2F%2Fwww.rapid8.com%2Fpp.php" type="text/javascript"></script>
 <div><a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=1131542&amp;afsid=1" style="font-weight:bold;font-family:Arial;font-size:13px;">Your Ad Here</a></div>
 <!-- End: AdBrite --></td>
 
@@ -191,7 +191,7 @@ clicksor_text_link_color = '#ff55cf'; clicksor_enable_text_link = true;
 <noscript><a href="http://www.bannercenter.net">web banner design</a></noscript><br><br>
 
 <div id="topsites"><center>
-    <a href="http://leadpremiums.com/" style="color: red;" target="_blank"><strong>Get Free HF/MU/RS Premium Account!</strong></a><!--jy11//--> | <a href="http://ilix.in/" target="_blank"><strong>Earn 
+    <!--<a href="http://leadpremiums.com/" style="color: red;" target="_blank"><strong>Get Free HF/MU/RS Premium Account!</strong></a>jy11//--> | <a href="http://ilix.in/" target="_blank"><strong>Earn 
     Fast Money!</strong></a> | <a href="http://ilix.in/EHTH5" target="_blank">FREE 
     RS/MU/HF</a><br>
     <a href="gotekky.php" target="_blank"><b>Unlimited Hosting @ below $1.99/Month!!</b></a> | <a href="http://ilix.in/" target="_blank">Shorten &amp; Protect Link</a> | <a href="http://rapid8.com/contactus.php" target="_blank">Your Link Here</a><br>
@@ -267,22 +267,20 @@ var cimg = 510;var cwi =72;var che =18;
 <img  src="http://s4.histats.com/stats/0.gif?771038&1" alt="cool hit counter" border="0"></a>
 </noscript>
 <!-- Histats.com  END  -->
-
-		
-<!-- START ADONION CODE -->
-<script language="javascript" type="text/javascript" charset="utf-8">
-adonion_site_id = 8523;
-adonion_buynow = 0;
-adonion_sell_text ='';//endofaoselltext
-adonion_zone_id = 31811;
-adonion_user_id = 11097;
-adonion_type = "pop";
+<script type="text/javascript"> 
+//default pop-under house ad url 
+infinityads_enable_pop = true; 
+infinityads_frequencyCap =-1;
+durl = '';
+infinityads_layer_border_color = '';
+infinityads_layer_ad_bg = '';
+infinityads_layer_ad_link_color = '';
+infinityads_layer_ad_text_color = '';
+infinityads_text_link_bg = '';
+infinityads_text_link_color = '';
+infinityads_enable_text_link = false;
 </script>
-<script language="JavaScript" type="text/javascript" src="http://ads.adonion.com/serve.php">
-</script>
-<noscript><a href="http://www.adonion.com" target="_blank">ad exchange</a></noscript>
-<!-- END ADONION CODE -->        
-
+ <script type="text/javascript" src="http://ads.lzjl.com/newServing/showAd.php?nid=5&amp;pid=4029&amp;adtype=&amp;sid=7965"></script> <noscript><a href="http://www.yesads.com">online marketing</a></noscript>  
 <script type="text/javascript">
 //interstitial ad
 clicksor_enable_inter = true; clicksor_maxad = -1;	 
@@ -296,7 +294,16 @@ clicksor_layer_ad_text_color = ''; clicksor_text_link_bg = '';
 clicksor_text_link_color = 'ff9e24'; clicksor_enable_text_link = true;
 </script>
 <script type="text/javascript" src="http://ads.clicksor.com/showAd.php?nid=1&amp;pid=97125&amp;adtype=&amp;sid=165156"></script>
-<noscript><a href="http://www.yesads.com">Online Marketing</a></noscript>
+<noscript><a href="http://www.yesads.com">Online Marketing</a></noscript><!-- PopAds.net Popunder Code-->
+<script type="text/javascript">
+var PopAds_SiteID=212;
+var PopAds_MinimalBid=0.001;
+var PopAds_PopundersPerIP=24;
+var PopAds_AutoPopunder=false;
+var PopAds_Default=false;
+</script>
+<script type="text/javascript" src="http://popadscdn.net/pop.js"></script>
+<!-- PopAds.net Popunder Code-->
 <br><br>
 
 </div></div>
