--- a/m/my/myc/mycrystalclicks.com.html
+++ b/m/my/myc/mycrystalclicks.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mycrystalclicks.com privacy policy that was archived on 2009-01-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090120095412id_/http%3A//www.mycrystalclicks.com/%3F_w%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mycrystalclicks.com privacy policy that was archived on 2010-08-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100801185224id_/http%3A//mycrystalclicks.com/%3F_w%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Language" content="en-gb">
