revahealth.com (archived on 2010-08-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;health",
  "char_count": 9852,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 16.59,
  "homepage_snapshot_redirected_domain": "revahealth.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100809024312id_/http://www.revahealth.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100809024312id_/http%3A//revahealth.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "revahealth.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100802052611id_/http%3A//www.revahealth.com/Privacy_policy.aspx",
  "policy_title": "RevaHealth.com",
  "policy_url": "revahealth.com/Privacy_policy.aspx",
  "sha1": "a1d4fe65b7414717c3cb4137fda62b9da5633587",
  "simhash": 6950093060196342398,
  "simhash_updated": false,
  "site_hostname": "revahealth.com",
  "site_url": "http://revahealth.com",
  "smog": 17.77,
  "strict_updated": false,
  "timestamp": "20100802052611",
  "word_count": 1601,
  "year": 2010
}

--- a/r/re/rev/revahealth.com.html
+++ b/r/re/rev/revahealth.com.html
@@ -1,15 +1,14 @@
-<!--The following is the downloaded HTML source of the revahealth.com privacy policy that was archived on 2010-03-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100328155918id_/http%3A//www.revahealth.com/consumer/Privacy_policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the revahealth.com privacy policy that was archived on 2010-08-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100802052611id_/http%3A//www.revahealth.com/Privacy_policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>RevaHealth.com</title>
 <link rel="stylesheet" type="text/css" media="all" href="/css/sign-up.css"> 
 <link rel="stylesheet" href="/css/static.css" type="text/css" media="screen">
-
 <link rel="stylesheet" href="/css/aboutpages.css" type="text/css" media="screen">
-<link rel="shortcut icon" href="http://www.revahealth.com/images/favicon.ico" type="image/x-icon">
-<link rel="icon" href="http://www.revahealth.com/images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
 </head>
 <body class="body">
@@ -28,7 +27,8 @@
     <div id="leftnav">
          <ul class="sidenav">
             <li style="width:227px;"><a class="page1" href="/about/index.aspx">About Us </a></li>
-            <li style="width:227px;"><a class="page1" id="heading" href="/privacy_policy.aspx">Privacy Policy </a></li>
+            <li style="width:227px;"><a class="page1" id="heading" href="../Privacy_policy.aspx">Privacy Policy </a></li>
+            <li style="width:227px;"><a class="page3" href="../Review_policy.aspx">Review Policy </a></li>
 	        <li style="width:227px;"><a class="page1" href="/about/contactus.aspx">Contact Us </a></li>
 	        <li style="width:227px;"><a class="page1" href="/about/management_team.aspx">Management Team </a></li>
 	        <li style="width:227px;"><a class="page1" href="/about/careers/index.aspx">Careers</a></li>
@@ -121,7 +121,7 @@
                     <ul class="navlist">
                         <li style="border:none;"><a href="http://www.revahealth.com/about/index.aspx">About</a></li>
                         <li><a href="http://www.revahealth.com/consumer/ViewTerms.aspx" target="_blank" rel="nofollow">Terms of Use</a></li>
-                        <li><a href="http://www.revahealth.com/Privacy_policy.aspx" rel="nofollow">Privacy Policy</a></li>
+                        <li><a href="http://www.revahealth.com/consumer/Privacy_policy.aspx" rel="nofollow">Privacy Policy</a></li>
                     </ul>
 
                     <p>This website is provided by <b><a href="http://www.revahealth.com">RevaHealth.com</a></b></p>       
