--- a/m/my/myp/myphotoalbum.com.html
+++ b/m/my/myp/myphotoalbum.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the myphotoalbum.com privacy policy that was archived on 2010-05-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100528181616id_/http%3A//www.myphotoalbum.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myphotoalbum.com privacy policy that was archived on 2010-08-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100803004452id_/http%3A//www.myphotoalbum.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
 	<title>MyPhotoAlbum :: Photo Sharing and Online Photo Album   ::  Privacy Policy</title>
@@ -16,6 +16,7 @@
 
 
 	
+
 
 <script src="http://static.myphotoalbum.com/javascript/pop-up.js" type="text/javascript"></script>
 <script src="http://static.myphotoalbum.com/javascript/drop-edit.js" type="text/javascript"></script>
@@ -156,13 +157,13 @@
 </script>
 
 
-<link rel="STYLESHEET" type="text/css" href="http://static.myphotoalbum.com/style/main_09.css?v-05-28-10">
-<link rel="STYLESHEET" type="text/css" href="http://static.myphotoalbum.com/style/dropdown.css?v-05-28-10">
-<link rel="STYLESHEET" type="text/css" href="http://static.myphotoalbum.com/branding/myphotoalbum/branding.css?v-05-28-10">
+<link rel="STYLESHEET" type="text/css" href="http://static.myphotoalbum.com/style/main_09.css?v-08-02-10">
+<link rel="STYLESHEET" type="text/css" href="http://static.myphotoalbum.com/style/dropdown.css?v-08-02-10">
+<link rel="STYLESHEET" type="text/css" href="http://static.myphotoalbum.com/branding/myphotoalbum/branding.css?v-08-02-10">
 
 
 
-	<link rel="STYLESHEET" type="text/css" href="http://static.myphotoalbum.com/style/www.css?v-05-28-10">
+	<link rel="STYLESHEET" type="text/css" href="http://static.myphotoalbum.com/style/www.css?v-08-02-10">
 </head>
 
 <body>
@@ -177,7 +178,7 @@
 		<td valign="top" class="top_header center" align="center" width="970"><div id="adminControlPanel"><style>
 	#logo { background: url('http://static.myphotoalbum.com/branding/myphotoalbum/logo-dark.gif') no-repeat left top;}
 </style>
-<link rel="STYLESHEET" type="text/css" href="http://static.myphotoalbum.com/style/dark.css?v-05-28-10">
+<link rel="STYLESHEET" type="text/css" href="http://static.myphotoalbum.com/style/dark.css?v-08-02-10">
 	
 	<table border="0" cellspacing="0" cellpadding="0" align="center" width="970">
 	<tbody><tr>
@@ -202,7 +203,7 @@
 			 Get your own photo album - <a href="https://www.myphotoalbum.com/signup.php" class="cartlink">Get Started FREE!</a> 
 			&nbsp;&nbsp;
 			<a href="http://support.myphotoalbum.com/ics/support/default.asp?deptID=5559" class="edit_button"> Help </a>
-			<a href="/login.php" class="edit_button"> Login</a>
+			<a href="https://www.myphotoalbum.com/login.php" class="edit_button"> Login</a>
 		</td>
 	</tr>
 
@@ -211,6 +212,8 @@
 	<tr>
 		
 		
+
+
 		<td align="right" class="tab_holder"> 
 				<ul id="nav" class="dropdown dropdown-horizontal">
 							<li class=" nodrop "><a href="https://www.myphotoalbum.com/signup.php?sid=www.myphotoalbum.com" title="Join" class="main" id="TopTry">join now!</a></li>	
@@ -247,23 +250,18 @@
 				</ul>
 		</td>
 
-
+                      
 
 		<td align="right" valign="bottom" class="med">
 			<div id="shoppingCartQuantity">
 				<div class="cartIcon"></div> 
-				<div class="cartlinks"><a id="numphotos" href="https://store.myphotoalbum.com/shopping_cart.php?call=print_photos" class="cartlink"> 0</a> 
-				items in your <a href="https://store.myphotoalbum.com/shopping_cart.php?call=print_photos" class="cartlink">Shopping Cart</a>
-				</div>
+				<div class="cartlinks">
+                    <a id="numphotos" href="https://store.myphotoalbum.com/shopping_cart.php?call=print_photos" class="cartlink"> 0</a> items in your <a href="https://store.myphotoalbum.com/shopping_cart.php?call=print_photos" class="cartlink">Shopping Cart</a>				</div>
 			</div>	 
 		</td>
 		
 	</tr>
 </tbody></table>	
-
- 
-
-
 
 
 
@@ -754,6 +752,8 @@ document.write ( my_year  )</script>2020 MyPhotoAlbum. All Rights Reserved. </di
 		   	    
 			} catch(err) {} 
 	</script>
+
+<!-- =========================== Site.Monit.oring.Script ============================  -->
 
 
 
