revenuestreet.com (archived on 2010-08-04)
{
  "alexa_rank": 100727,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 6279,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.98,
  "homepage_snapshot_redirected_domain": "revenuestreet.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100903060813id_/http://www.revenuestreet.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100903060813id_/http%3A//revenuestreet.com",
  "interval": "2010_B",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "revenuestreet.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100804051351id_/http%3A//www.revenuestreet.com/privacy-policy.html",
  "policy_title": "RevenueStreet, Affiliate Marketing, Performance Based Online Advertising Company",
  "policy_url": "revenuestreet.com/privacy-policy.html",
  "sha1": "6f08ba73d15dd6946fa742b8991d52dd55a7ee12",
  "simhash": 4966937570898748887,
  "simhash_updated": false,
  "site_hostname": "revenuestreet.com",
  "site_url": "http://revenuestreet.com",
  "smog": 14.12,
  "strict_updated": false,
  "timestamp": "20100804051351",
  "word_count": 1020,
  "year": 2010
}

--- a/r/re/rev/revenuestreet.com.html
+++ b/r/re/rev/revenuestreet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the revenuestreet.com privacy policy that was archived on 2010-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100627022047id_/http%3A//www.revenuestreet.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the revenuestreet.com privacy policy that was archived on 2010-08-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100804051351id_/http%3A//www.revenuestreet.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb"><head>
 <meta name="google-site-verification" content="9N6fbUzLtD9cAcX65ijAj6MCFx9vY1qcUENxg6wdTIQ">
@@ -62,7 +62,7 @@
 	<input type="hidden" name="option" value="com_user">
 	<input type="hidden" name="task" value="login">
 	<input type="hidden" name="return" value="L3ByaXZhY3ktcG9saWN5Lmh0bWw=">
-	<input type="hidden" name="3d6c8a452baada775df1ad164996bfdb" value="1"></form>
+	<input type="hidden" name="5c3a91595ce52475e5a4f634335da370" value="1"></form>
 </div>
 			<div id="inc500"><!--<a href="http://www.inc.com/inc5000/2009/company-profile.html?id=200904880" target="_blank">--><img src="http://www.revenuestreet.com/templates/revenue/images/inc500.png" alt="Inc 500"><!--</a>--></div>
 			<div id="slogan"></div>
@@ -173,7 +173,7 @@
 			<br style="display: none; clear: both;">
 		</div>
 		<div class="latest_content">	
-			<p style="text-align: center; width: 100%;"><a href="http://www.leadscon.com/" target="_blank"><img src="http://themediacrew.com/content/img/leadscon72010.png" border="0"></a></p> <a href="/news/1-news/16-personal.html" class="read_more"></a><!--...&gt;&gt;-->
+			<p style="text-align: center; width: 100%;"><a href="http://www.affiliatesummit.com/" target="_blank"><img src="http://themediacrew.com/content/img/affsum82010.jpg" border="0"></a></p> <a href="/news/1-news/16-personal.html" class="read_more"></a><!--...&gt;&gt;-->
 		</div>
 	</li>
 </ul>	</div>
