--- a/m/my/myp/myplick.com.html
+++ b/m/my/myp/myplick.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the myplick.com privacy policy that was archived on 2010-03-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100317132656id_/http%3A//www.myplick.com/privacy.do) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myplick.com privacy policy that was archived on 2010-08-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100805062743id_/http%3A//www.myplick.com/privacy.do) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>myPlick - Privacy Policy</title>
@@ -8,21 +8,20 @@
 <meta name="keywords" content="PowerPoint Presentations, Presentation Sharing, Slideshows, Embed Presentations, Embed Slideshows">
 <meta name="description" content="Myplick is an easy way to share your Presentations and Slideshows online.">
 
-<link href="/css/22.global.css" rel="stylesheet" type="text/css">
-<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+<link href="/css/23.global.css" rel="stylesheet" type="text/css">
+<link rel="icon" href="http://d2hm5emlmiiqke.cloudfront.net/img/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="http://d2hm5emlmiiqke.cloudfront.net/img/favicon.ico" type="image/x-icon">
 <link rel="alternate" type="application/rss+xml" title="Myplick RSS feed" href="http://feeds.myplick.com/myplick/recent">
 
-<script type="text/javascript" src="/scripts/22.mymenu.js"></script>
-<script type="text/javascript" src="/scripts/22.md5.js"></script>
-<script type="text/javascript" src="/scripts/22.myplick_util.js"></script>
+<script type="text/javascript" src="/scripts/23.mymenu.js"></script>
+<script type="text/javascript" src="/scripts/23.md5.js"></script>
+<script type="text/javascript" src="/scripts/23.myplick_util.js"></script>
 <script language="javascript">AC_FL_RunContent = 0;</script>
-<script type="text/javascript" src="/scripts/22.AC_RunActiveContent.js"></script>
-<script language="javascript" src="/scripts/22.swfobject.js"></script>
-<script language="javascript" src="/scripts/22.swfupload.js"></script>
-<script language="javascript" src="/scripts/22.swfuploadHandlers.js"></script>
-<script language="javascript" src="/scripts/22.AC_OETags.js"></script>
-
+<script type="text/javascript" src="/scripts/23.AC_RunActiveContent.js"></script>
+<script language="javascript" src="/scripts/23.swfobject.js"></script>
+<script language="javascript" src="/scripts/23.swfupload.js"></script>
+<script language="javascript" src="/scripts/23.swfuploadHandlers.js"></script>
+<script language="javascript" src="/scripts/23.AC_OETags.js"></script>
 
 <style type="text/css">
 <!--
@@ -40,7 +39,9 @@
 </head>
 
 <body><noscript>
+
 <img src="http://pixel.quantserve.com/pixel/p-567_JmA_KGscM.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
+
 </noscript><table width="982" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr><td>
 
@@ -50,7 +51,7 @@
 
 
 
-<div id="logo"><a href="/"><img src="/img/myplickLOGO.gif" alt="logo" border="0" title="myplick logo"></a></div>
+<div id="logo"><a href="/"><img src="http://d2hm5emlmiiqke.cloudfront.net/img/myplickLOGO.gif" alt="logo" border="0" title="myplick logo"></a></div>
 
 <div id="nav1"> <a href="/"><span>Home</span></a> </div><div id="nav2"><a href="/browse.do"><span>Plicks</span></a></div><div id="nav3"> <a href="/browsePlicker.do"><span>Plickers</span></a></div><!--<div id="nav4"> <a href="/plickoff.do"><span>PlickOff</span></a></div>--><div id="nav4"> <a href="/upload.do"><span>Upload</span></a> </div>
   <!-- #nav_top -->
@@ -87,7 +88,7 @@
 <tr><td><div id="nav_bottom"></div></td></tr>
 
   <tr>
-    <td background="/img/box_bg.jpg">
+    <td background="http://d2hm5emlmiiqke.cloudfront.net/img/box_bg.jpg">
     <table width="982" border="0" cellpadding="0" cellspacing="0">
         <tbody><tr><td align="center" width="800" style="padding-left:80px;">
         <table width="800">
@@ -146,53 +147,101 @@
     </tr></tbody></table></td>
   </tr>
   <tr>
+
   <td align="left"><div id="footer">
+
   <ul>
+
     <li><a href="/faq.do">[FAQ]</a></li>
+
     <li><a href="http://blog.myplick.com">[Blog]</a></li>
+
     <li><a href="/contactus.do">[Contact Us]</a></li>
+
   </ul>
+
   
+
   <span id="copyright" style="padding-left:540px; color: #4B76B3;font-size: 9px;">
+
     <a href="/privacy.do">Privacy Policy |</a>
+
     <a href="/terms.do">Terms of Use</a>
+
     <font color="#000000">&nbsp;&nbsp;&nbsp;© 2007 Eastar Technologies Inc. All rights reserved.</font>
+
   </span>
+
 </div></td>
+
 </tr>
+
 <!-- Start Quantcast tag -->
+
 <script type="text/javascript">
+
 _qoptions={
+
 qacct:"p-567_JmA_KGscM"
+
 };
+
 </script>
+
 <script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
 
+
+
 <!-- End Quantcast tag -->
+
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+
 </script>
+
 <script type="text/javascript">
+
 _uacct = "UA-1932377-1";
+
 urchinTracker();
+
 </script>
+
 <script type="text/javascript">
+
 var _sf_async_config={uid:4302,domain:"myplick.com"};
+
 (function(){
+
   function loadChartbeat() {
+
     window._sf_endpt=(new Date()).getTime();
+
     var e = document.createElement('script');
+
     e.setAttribute('language', 'javascript');
+
     e.setAttribute('type', 'text/javascript');
+
     e.setAttribute('src',
+
        (("https:" == document.location.protocol) ? "https://s3.amazonaws.com/" : "http://") +
+
        "static.chartbeat.com/js/chartbeat.js");
+
     document.body.appendChild(e);
+
   }
+
   var oldonload = window.onload;
+
   window.onload = (typeof window.onload != 'function') ?
+
      loadChartbeat : function() { oldonload(); loadChartbeat(); };
+
 })();
+
 </script>
+
 
 </tbody></table>
 
