--- a/p/pl/pla/playgirl.com.html
+++ b/p/pl/pla/playgirl.com.html
@@ -1,8 +1,9 @@
-<!--The following is the downloaded HTML source of the playgirl.com privacy policy that was archived on 2010-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100607102638id_/http%3A//www.playgirl.com/privacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the playgirl.com privacy policy that was archived on 2010-08-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100805072049id_/http%3A//www.playgirl.com/privacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <link rel="stylesheet" href="/Content/shared/css/css.css?v20100201" type="text/css">
+<script type="text/javascript" async="" src="//web.archive.org/web/20110131221222/http://doug1izaerwt3.cloudfront.net/980e7069988b403616153b9eceb3d98386c8547a.1.js"></script><script type="text/javascript" async="" src="//web.archive.org/web/20110131221222/http://i.kissmetrics.com/i.js"></script><script src="/Content/shared/scripts/tracking-head-1.js" type="text/javascript"></script>
 <script src="/Content/tour/shared/jquery/jquery-1.3.2.min.js" type="text/javascript"></script>
 
    <title>Privacy Policy</title>
@@ -95,8 +96,9 @@ var WRInitTime=(new Date()).getTime();
 </div>
 
 <div id="ClickTaleDiv" style="display: none;"></div>
-<script src="/Content/shared/scripts/tracking1.js?v20100518" type="text/javascript"></script>
+<script src="/Content/shared/scripts/tracking1.js?v20100725" type="text/javascript"></script><script src="https://web.archive.org/web/20110131221340/https://ssl.google-analytics.com/ga.js" type="text/javascript"></script><script src="https://web.archive.org/web/20110131221340/https://clicktale.pantherssl.com/WRb.js" type="text/javascript"></script>
 <script src="/Content/shared/scripts/tracking2.js?v20100518" type="text/javascript"></script>
+<div id="primary" style="visibility:hidden"><iframe src="/radar.html" id="myIframe" name="myIframe" height="0" width="0" border="0" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0" style="position:absolute;left:0px;top:0px;z-index:0;"></iframe></div>
 
 
-</body></html>
+<div style="position: absolute; left: -10px; visibility: hidden;"><object type="application/x-shockwave-flash" id="_kmfc" data="https://web.archive.org/web/20120214213614/https://doug1izaerwt3.cloudfront.net/fs.swf" width="1" height="1"><param name="movie" value="https://web.archive.org/web/20120214213614/https://doug1izaerwt3.cloudfront.net/fs.swf"><param name="allowScriptAccess" value="always"><param name="FlashVars" value="k=980e7069988b403616153b9eceb3d98386c8547a"></object></div></body></html>
