--- a/f/fa/fas/fashionfantasygame.com.html
+++ b/f/fa/fas/fashionfantasygame.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fashionfantasygame.com privacy policy that was archived on 2010-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100604024701id_/http%3A//www.fashionfantasygame.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fashionfantasygame.com privacy policy that was archived on 2010-08-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100808002552id_/http%3A//www.fashionfantasygame.com/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -14,7 +14,7 @@
             <li><a href="/about_us.php">ABOUT US</a></li>
             <li><a href="/launch.php?nu=2">VIP MEMBERSHIP</a></li>
             <li><a onclick="window.open('/invite.php?q=g&amp;page=home', '', 'width=600,height=500,scrollbars=1');" href="#">INVITE FRIENDS</a></li>
-            <li><a href="/index.php">HELP</a></li>
+            <li><a href="#" onclick="window.open('/help.php', '', 'width=670,height=410,scrollbars=0,resizable=0');">HELP</a></li>
         </ul>
         <div id="login_wrapper">
             <div id="inputs_wrapper">
@@ -161,9 +161,11 @@ info@rlillytuckerwear.com, or Nancy Ganz, R. Lilly Tuckerwear, 120 East End Ave,
 		<div style="width:100%;text-align:center;margin:0 auto;vertical-align:middle;">
         <a style="font-size:11px;font-weight:bold;color:red" href="privacy_policy.php">Privacy Policy</a> | <a href="terms_of_use.php">Terms of Use</a> | <a href="advertise_on_ffg.php">Advertise in FFG</a> | <a href="about_founder.php">About Founder</a> | &nbsp;&nbsp;&nbsp;<a href="http://www.facebook.com/pages/Fashion-Fantasy-Game/37519071095?ref=ts#" target="_blank"><img border="0" width="14" height="16" alt="Fashion Fantasy Game on Facebook" src="/images/buttons/facebook.png"> FFG on Facebook</a> &nbsp;&nbsp;<a href="http://www.myspace.com/fashionfantasygame" target="_blank" style="cursor:hand;border:0px"><img height="16" width="14" border="0" alt="Fashion Fantasy Game on MySpace" src="/images/buttons/myspace.png"> FFG on Myspace</a> &nbsp;&nbsp;<a href="http://www.twitter.com/fashionfantasy" target="_blank" style="cursor:hand;border:0px"><img width="13" height="16" border="0" alt="Fashion Fantasy Game on Twitter" src="/images/buttons/twitter.png"> FFG on Twitter</a><br>All Content Copyright 2010 R LillyTuckerwear Inc | <script type="text/javascript" language="JavaScript">
 glam_affiliate_id = '369615874';
-glam_logo_type = 'GFamily';
+//glam_logo_type = 'GFamily';
+glam_logo_type='GStyle'; 
 glam_logo_size = '160x24';
 glam_logo_color = 'wht';
+glam_logo_country = 'US';
 </script>
 <script type="text/javascript" src="http://www8.glam.com/js/widgets/glam_logo.js"></script>
 </div></div>
