--- a/c/ca/cai/cairns.com.au.html
+++ b/c/ca/cai/cairns.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cairns.com.au privacy policy that was archived on 2010-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100606013138id_/http%3A//www.cairns.com.au/cairns-post-privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cairns.com.au privacy policy that was archived on 2010-08-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100808012003id_/http%3A//www.cairns.com.au/cairns-post-privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>The Cairns Post Privacy Policy - Cairns, Australia | News, Accommodation, Attractions, Sports, Beaches, Events - All about Cairns Queensland, Australia</title>
@@ -140,10 +140,25 @@ name = "The Cairns Post | News | index | Privacy Policy ";
 		    <li><a href="http://tools.cairns.com.au/activities/kids-activities.php">Kids</a></li>
 		    </ul>
           </li>
-           <li class="n4"><a href="/visitor-information/accommodation/cairns-accommodation-guide.html">Accommodation</a>
-          			 <ul>
-                    <li id="sn1"><a href="/visitor-information/accommodation/cairns-accommodation-guide.html">Book Accommodation</a></li>
-          <li id="sn2"><a href="/visitor-information/accommodation/cairns-accommodation-information.html">Accommodation Options</a></li>
+           <li class="n4"><a href="/accommodation/">Accommodation</a>
+          <ul>
+          <li id="sn1"><a href="/accommodation/atherton-tablelands/">Atherton Tablelands</a></li>
+          <li id="sn2"><a href="/accommodation/cairns/">Cairns</a></li>
+          <li id="sn2"><a href="/accommodation/cairns-beaches/">Cairns Beaches</a></li>
+          <li id="sn2"><a href="/accommodation/cape-tribulation/">Cape Tribulation</a></li>
+          <li id="sn2"><a href="/accommodation/cape-york/">Cape York</a></li>
+          <li id="sn2"><a href="/accommodation/daintree/">Daintree</a></li>
+          <li id="sn2"><a href="/accommodation/great-barrier-reef/">Great Barrier Reef</a></li>
+          <li id="sn2"><a href="/accommodation/kuranda/">Kuranda</a></li>
+          <li id="sn2"><a href="/accommodation/mission-beach/">Mission Beach</a></li>
+          <li id="sn2"><a href="/accommodation/outback/">The Outback</a></li>
+          <li id="sn2"><a href="/accommodation/palm-cove/">Palm Cove</a></li>
+          <li id="sn2"><a href="/accommodation/port-dogulas/">Port Douglas</a></li>
+
+
+
+
+
           </ul>
           </li>
       </ul>
@@ -152,6 +167,7 @@ name = "The Cairns Post | News | index | Privacy Policy ";
           <li class="n4"><a href="/news/index.html">News</a>
           	<ul>
                 <li><a href="/news/index.html">Cairns News</a></li>
+                <li><a href="/news/federal-election/">2010 Federal Election</a></li>
                 <li><a href="/opinion/index.html">Opinion</a></li>
                 <li><a href="/opinion/have-your-say-comments.html">All Comments</a></li>
                 <li><a href="/news/latest-breaking-news.html">Breaking News</a></li>
@@ -201,6 +217,7 @@ name = "The Cairns Post | News | index | Privacy Policy ";
 </li>
           <li class="n8"><a href="/realestate/index.html">Real Estate</a>
  <ul>
+            <li><a href="/realestate/index.html">Real Estate Home</a></li>
             <li><a href="/realestate/real-estate-for-sale.html">Properties for sale</a></li>
             <li><a href="/realestate/open-for-inspection.html">Open For Inspection</a></li>
             <li><a href="/realestate/cairns-suburb-guide.html">Cairns Suburb Guide</a></li>
@@ -222,8 +239,9 @@ name = "The Cairns Post | News | index | Privacy Policy ";
  <div class="sub-nav">
 <ul>
     		                <li class="sn1"><a href="/news/index.html">Cairns News</a></li>
-                <li class="sn2"><a href="/opinion/index.html">Opinion</a></li>
-                <li class="sn3"><a href="/opinion/have-your-say-comments.html">All Comments</a></li>
+    		                <li class="sn2"><a href="/news/federal-election/">2010 Federal Election</a></li>
+                <li class="sn3"><a href="/opinion/index.html">Opinion</a></li>
+                <li class="sn4"><a href="/opinion/have-your-say-comments.html">All Comments</a></li>
                 <li class="sn5"><a href="/news/latest-breaking-news.html">Breaking News</a></li>
                 <li class="sn6"><a href="/news/australian-national-news.html">National News</a></li>
                 <li class="sn7"><a href="/news/world-news.html">World News</a></li>
@@ -699,8 +717,8 @@ function countdown() {
 window.onload=starttime
 
 </script>
-<!-- #END REFRESH SCRIPT -->
 
+<!-- #END REFRESH SCRIPT -->
 
 
 <div class="module kit kit-footer"><script type="text/javascript">ndm.kit.footer();</script></div><!-- // .module kit -->
