itsallgay.com (archived on 2010-08-08)
{
  "alexa_rank": 9792,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 7152,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 16.42,
  "homepage_snapshot_redirected_domain": "itsallgay.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100928045349id_/http://www.itsallgay.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100928045349id_/http%3A//itsallgay.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "itsallgay.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100808012716id_/http%3A//www.itsallgay.com/privacy",
  "policy_title": "Its All Gay",
  "policy_url": "itsallgay.com/privacy",
  "sha1": "139f13d5a929d11323479c0e5009b0b0e1b8f9da",
  "simhash": 15474395296509876492,
  "simhash_updated": false,
  "site_hostname": "itsallgay.com",
  "site_url": "http://itsallgay.com",
  "smog": 17.08,
  "strict_updated": true,
  "timestamp": "20100808012716",
  "word_count": 1109,
  "year": 2010
}

--- a/i/it/its/itsallgay.com.html
+++ b/i/it/its/itsallgay.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the itsallgay.com privacy policy that was archived on 2010-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100604033741id_/http%3A//www.itsallgay.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the itsallgay.com privacy policy that was archived on 2010-08-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100808012716id_/http%3A//www.itsallgay.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <title>Its All Gay</title>
@@ -25,7 +25,7 @@ var imgurl = 'http://www.itsallgay.com/images';
 <script language="JavaScript" src="http://www.itsallgay.com/js/myjavascriptajax.js" type="text/javascript"></script>
 <script language="JavaScript" src="http://www.itsallgay.com/js/myjavascript.js" type="text/javascript"></script>
 <script language="JavaScript" src="http://www.itsallgay.com/js/thumbs.js" type="text/javascript"></script>
-<script type="text/javascript" src="http://www01.gayforit.com/openx/www/delivery/spcjs.php?id=2&amp;target=_blank"></script>
+
 
 <link href="http://www.itsallgay.com/css/upload-progress.css" rel="stylesheet" type="text/css">
 <link href="http://www.itsallgay.com/css/style.css" rel="stylesheet" type="text/css">
@@ -150,7 +150,11 @@ var imgurl = 'http://www.itsallgay.com/images';
 
 <div class="gfi_vertical_line" style="background: transparent url(http://www.gayforit.com/images/network_bar_vertical_line.png) no-repeat scroll -10px 0pt; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; float: left; width: 1px; height: 20px;"></div>
 
-<a href="http://www.camforit.com" id="cfi_id" class="network_bar" style="padding: 0px 10px; color: rgb(153, 153, 153); height: 19px; line-height: 18px; float: left; font-size: 11px; text-decoration: none; background-color: transparent;">CamForIt</a>
+<a href="http://www.streamen.com/?DF=0&amp;AFNO=1-0-613103-344944&amp;UHNSMTY=344" id="cfi_id" class="network_bar" style="padding: 0px 10px; color: rgb(153, 153, 153); height: 19px; line-height: 18px; float: left; font-size: 11px; text-decoration: none; background-color: transparent;">Live Cams</a>
+
+<div class="gfi_vertical_line" style="background: transparent url(http://www.gayforit.com/images/network_bar_vertical_line.png) no-repeat scroll -10px 0pt; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; float: left; width: 1px; height: 20px;"></div>
+
+<a href="http://www.homoactive.com/?nats=MTAwMDE3LjE4LjE2LjE2LjAuMC4wLjAuMA" id="cfi_id" class="network_bar" style="padding: 0px 10px; color: rgb(153, 153, 153); height: 19px; line-height: 18px; float: left; font-size: 11px; text-decoration: none; background-color: transparent;">Shop</a>
 
 <div class="gfi_vertical_line" style="background: transparent url(http://www.gayforit.com/images/network_bar_vertical_line.png) no-repeat scroll -10px 0pt; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; float: left; width: 1px; height: 20px;"></div><a href="http://www.jerkyourtube.com" id="jyt_id" class="network_bar" style="padding: 0px 10px; color: rgb(153, 153, 153); height: 19px; line-height: 18px; float: left; font-size: 11px; text-decoration: none; background-color: transparent;">JerkYourTube</a><div class="gfi_vertical_line" style="background: transparent url(http://www.gayforit.com/images/network_bar_vertical_line.png) no-repeat scroll -10px 0pt; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; float: left; width: 1px; height: 20px;"></div>
 </div>
@@ -217,7 +221,7 @@ var imgurl = 'http://www.itsallgay.com/images';
 				<div class="navigation_title"><a href="http://www.itsallgay.com/usergroups">Groups</a></div>
 
 				<!-- <div class="navigation_title"><a href="http://www.itsallgay.com/community" >Community</a></div> -->
-		 <!-- <div class="navigation_title"><a href="http://www.camforit.com/" >Live Cams</a></div>-->
+		 <div class="navigation_title"><a href="http://www.streamen.com/?DF=0&amp;AFNO=1-0-613103-344944&amp;UHNSMTY=344">Live Cams</a></div>
 				<div class="navigation_title"><a href="http://www.itsallgay.com/video_limit_upgrade_new.php">Upgrade</a></div>
 				<div class="navigation_title"><a href="http://www.itsallgay.com/advance_search.php">A. Search</a></div>
 			</div>
