streamingthe.net (archived on 2010-08-10)
{
  "alexa_rank": 58724,
  "analysis_subcorpus": true,
  "categories": "entertainment;streamingmedia",
  "char_count": 5009,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.5,
  "homepage_snapshot_redirected_domain": "streamingthe.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100906072130id_/http://www.streamingthe.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100906072130id_/http%3A//streamingthe.net",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "streamingthe.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100810025556id_/http%3A//www.streamingthe.net/privacy.php",
  "policy_title": "Watch Live Online TV and Radio Streaming",
  "policy_url": "streamingthe.net/privacy.php",
  "sha1": "9afb8c6393e37f4e5a337e39251796782f5dee5f",
  "simhash": 1261893081788190005,
  "simhash_updated": false,
  "site_hostname": "streamingthe.net",
  "site_url": "http://streamingthe.net",
  "smog": 13.3,
  "strict_updated": false,
  "timestamp": "20100810025556",
  "word_count": 843,
  "year": 2010
}

--- a/s/st/str/streamingthe.net.html
+++ b/s/st/str/streamingthe.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the streamingthe.net privacy policy that was archived on 2010-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100626064108id_/http%3A//www.streamingthe.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the streamingthe.net privacy policy that was archived on 2010-08-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100810025556id_/http%3A//www.streamingthe.net/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>                                                     
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -8,7 +8,7 @@
 
 <meta name="google-site-verification" content="D4gbM6jVIubyszfkxGoIEV8a2WgDpjwVI7I3S5yHZc0">
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script language="javascript" type="text/javascript">
 function showlayer(layer){
         var myLayer=document.getElementById(layer).style.display;
         if(myLayer=="none"){
@@ -21,7 +21,21 @@ function showlayer(layer){
 
 
 
-<title>Watch Live Online TV and Radio Streaming</title><meta name="keywords" content="free ,  online, radio, live  streaming, , watch tv"><meta name="description" content="Watch online the best free live streaming tv and radio ."></head>
+<title>Watch Live Online TV and Radio Streaming</title><meta name="keywords" content="free ,  online, radio, live  streaming, , watch tv"><meta name="description" content="Watch online the best free live streaming tv and radio ."><script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-6436283-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+</head>
 <body>
 <div class="main_container">
 	<div class="header">
@@ -102,6 +116,7 @@ function submitform()
 <option value="Algeria">Algeria</option>
 <option value="American Samoa">American Samoa</option>
 <option value="Andorra">Andorra</option>
+<option value="Angola">Angola</option>
 <option value="Anguilla">Anguilla</option>
 <option value="Antigua">Antigua</option>
 <option value="Argentina">Argentina</option>
@@ -149,7 +164,6 @@ function submitform()
 <option value="Egypt">Egypt</option>
 <option value="El Salvador">El Salvador</option>
 <option value="Estonia">Estonia</option>
-<option value="Europe">Europe</option>
 <option value="Faroe Islands">Faroe Islands</option>
 <option value="Finland">Finland</option>
 <option value="France">France</option>
@@ -161,6 +175,7 @@ function submitform()
 <option value="Gibraltar">Gibraltar</option>
 <option value="Greece">Greece</option>
 <option value="Grenada">Grenada</option>
+<option value="Guam">Guam</option>
 <option value="Guatemala">Guatemala</option>
 <option value="Guadeloupe">Guadeloupe</option>
 <option value="Guine-Bissau">Guine-Bissau</option>
@@ -196,6 +211,7 @@ function submitform()
 <option value="Lithuania">Lithuania</option>
 <option value="Luxembourg">Luxembourg</option>
 <option value="Macedonia">Macedonia</option>
+<option value="Madagascar">Madagascar</option>
 <option value="Majorca">Majorca</option>
 <option value="Malaysia">Malaysia</option>
 <option value="Maldives">Maldives</option>
@@ -211,6 +227,7 @@ function submitform()
 <option value="Mongolia">Mongolia</option>
 <option value="Montenegro">Montenegro</option>
 <option value="Morocco">Morocco</option>
+<option value="Mozambique">Mozambique</option>
 <option value="Nepal">Nepal</option>
 <option value="Netherlands">Netherlands</option>
 <option value="Netherlands Antilles">Netherlands Antilles</option>
@@ -260,6 +277,7 @@ function submitform()
 <option value="Tunisia">Tunisia</option>
 <option value="Turkey">Turkey</option>
 <option value="Ua Emirates">UA Emirates</option>
+<option value="Uganda">Uganda</option>
 <option value="Ukraine">Ukraine</option>
 <option value="United Kingdom">United Kingdom</option>
 <option value="Uruguay">Uruguay</option>
@@ -409,8 +427,6 @@ google_color_url = "0000FF";
         <div class="inner_prt">
                 <div class="top_prt">
 
-
-
  <div class="desc">
                                 <p>Free Streaming Live TV and Live Streaming Radio.</p>
                                 <p>StreamingThe.Net is the best place to watch tv online and listen to radio online from your favorite stations around the world.</p>
@@ -436,7 +452,7 @@ google_color_url = "0000FF";
                                 <ul>
                                         <li class="icon_site_map"><a href="sitemap_index.xml">Site Map</a></li>
                                         <li class="icon_mobile"><a href="http://mobile.streamingthe.net">Mobile</a></li>
-                                        <li><a href="http://blog.streamingthe.net">Blog</a></li>
+                                        <li><a href="help.php">FAQ Help</a></li>
                                 </ul>
 
                         </div>
@@ -454,16 +470,6 @@ Use of this web site constitutes acceptance of the Terms of Use and Privacy Poli
                 <div class="cl_b"><!-- --></div>
         </div>
 </div>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-6436283-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-
 
 
 
