--- a/g/go/goo/google.in.html
+++ b/g/go/goo/google.in.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the google.in privacy policy that was archived on 2010-04-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100421231144id_/http%3A//www.google.co.in/intl/en/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the google.in privacy policy that was archived on 2010-08-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100811010130id_/http%3A//www.google.co.in/intl/en/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8">
   <title>Google Privacy Center</title>
@@ -20,6 +20,7 @@
       <ul>
         <li><a href="https://www.google.com/dashboard">Dashboard</a>
         </li><li><a href="/ads/preferences/">Ads Preferences Manager</a>
+        </li><li><a href="http://tools.google.com/dlpage/gaoptout?hl=en">Analytics Opt-out</a>
       </li></ul>
     </li><li><a href="/accounts/TOS">Terms of Service</a>
   </li></ul>
