--- a/u/up/upl/uploadjockey.com.html
+++ b/u/up/upl/uploadjockey.com.html
@@ -1,11 +1,9 @@
-<!--The following is the downloaded HTML source of the uploadjockey.com privacy policy that was archived on 2010-01-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100116193011id_/http%3A//www.uploadjockey.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the uploadjockey.com privacy policy that was archived on 2010-08-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100811022257id_/http%3A//www.uploadjockey.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><head>
         <title>User Privacy Statement - Uploadjockey.com</title>
-        <link rel="stylesheet" href="http://www.uploadjockey.com/main.css" type="text/css">
-        <link rel="shortcut icon" href="/favicon.ico?">
-        <link rel="icon" href="/favicon.ico?">
+        <link rel="stylesheet" href="http://www.uploadjockey.com/main.css.php" type="text/css">
     </head>
     <body>
 
@@ -49,7 +47,7 @@
 
       <table align="center" style="text-align:center">
 <tbody><tr><td align="center" style="text-align:center">
-<!-- Begin: AdBrite, Generated: 2009-02-11 17:46:48  -->
+<!-- Begin: AdBrite, Generated: 2010-02-20 7:12:11  -->
 <script type="text/javascript">
 var AdBrite_Title_Color = '0000FF';
 var AdBrite_Text_Color = '000000';
@@ -58,7 +56,7 @@ var AdBrite_Border_Color = 'CCCCCC';
 var AdBrite_URL_Color = '008000';
 try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
 </script>
-<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=914816&zs=3436385f3630&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=914816&amp;zs=3436385f3630&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20100116193011id_%2Fhttp%253A%2F%2Fwww.uploadjockey.com%2Fprivacy.php" type="text/javascript"></script>
+<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=914816&zs=3436385f3630&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=914816&amp;zs=3436385f3630&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20100811022257id_%2Fhttp%253A%2F%2Fwww.uploadjockey.com%2Fprivacy.php" type="text/javascript"></script>
 <a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=914816&amp;afsid=1"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-banner.gif" style="background-color:#CCCCCC;border:none;padding:0;margin:0;" alt="Your Ad Here" width="11" height="60" border="0"></a></span>
 <!-- End: AdBrite -->
 <br>
@@ -129,8 +127,8 @@ pageTracker._trackPageview();
 </script>
 
 <br>
-    
 
+    
 
 
 
