whitesmokestart.com (archived on 2010-08-11)
{
  "alexa_rank": 45497,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 2580,
  "classifier_probability": 0.86,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.94,
  "homepage_snapshot_redirected_domain": "whitesmokestart.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100927052223id_/http://www.whitesmokestart.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100927052223id_/http%3A//whitesmokestart.com",
  "interval": "2010_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "whitesmokestart.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100811032222id_/http%3A//www.whitesmokestart.com/privacy",
  "policy_title": "WhiteSmoke Start - Privacy Policy",
  "policy_url": "whitesmokestart.com/privacy",
  "sha1": "488271bbce75eadf67f872c86a173bddb6f64dda",
  "simhash": 5493424774795459896,
  "simhash_updated": false,
  "site_hostname": "whitesmokestart.com",
  "site_url": "http://whitesmokestart.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100811032222",
  "word_count": 462,
  "year": 2010
}

--- a/w/wh/whi/whitesmokestart.com.html
+++ b/w/wh/whi/whitesmokestart.com.html
@@ -1,9 +1,10 @@
-<!--The following is the downloaded HTML source of the whitesmokestart.com privacy policy that was archived on 2010-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100611144935id_/http%3A//www.whitesmokestart.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the whitesmokestart.com privacy policy that was archived on 2010-08-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100811032222id_/http%3A//www.whitesmokestart.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head>
 	<title>WhiteSmoke Start - Privacy Policy</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="ROBOTS" content="NOINDEX, NOFOLLOW, NOARCHIVE">
 	<link rel="stylesheet" type="text/css" media="screen, print, projection, tv" href="/css/legal.css">
 </head>
 <body>
