--- a/a/an/ane/anetforums.com.html
+++ b/a/an/ane/anetforums.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the anetforums.com privacy policy that was archived on 2010-05-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100527205715id_/http%3A//www.activewin.com/terms/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the anetforums.com privacy policy that was archived on 2010-08-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100812092709id_/http%3A//www.activewin.com/terms/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -25,7 +25,7 @@
 	<tbody><tr>
 </tr><tr>
 			<td width="100%" align="center">
-<a href="http://www.ericom.com/ericom_blaze.asp?URL_ID=682"><img border="0" src="http://www.activewin.com/awin/images/blaze_static2.gif" width="720" height="90"></a></td>
+<a href="http://www.advancedeventviewer.com"><img border="0" src="http://www.activewin.com/awin/images/mobilenetswitchleader.jpg" width="720" height="90"></a></td>
 		<td>			<a href="http://www.mobilenetswitch.com/"><img border="0" src="http://www.activewin.com/images/mbn_ad.gif" width="140" height="68"></a>
 
 </td>
