--- a/h/ha/hap/happythreads.ie.html
+++ b/h/ha/hap/happythreads.ie.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the happythreads.ie privacy policy that was archived on 2010-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100613024927id_/http%3A//www.happythreads.ie/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the happythreads.ie privacy policy that was archived on 2010-08-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100812220058id_/http%3A//www.happythreads.ie/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Introduction and General Terms </title>
@@ -26,7 +26,7 @@
 <li><a href="/catalogue/trousers.html" title="Trousers">Trousers</a></li>
 <li><a href="/catalogue/men.html" title="Men">Men</a></li>
 <li><a href="/catalogue/shoes.html" title="Shoes">Shoes</a></li>
-<li><a href="/catalogue/lab-coats.html" title="Lab Coats">Lab Coats</a></li>
+<li><a href="/catalogue/labcoats-and-jackets.html" title="LabCoats and Jackets">LabCoats &amp; Jackets</a></li>
 <li class="last"><a href="/catalogue/accessories.html" title="Accessories coming soon">ACCESSORIES</a></li>
 </ul>
     <div id="searchbar">  
