hanger94.com (archived on 2010-08-14)
{
  "alexa_rank": 192166,
  "analysis_subcorpus": true,
  "categories": "blogsandpersonal;business",
  "char_count": 9677,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.07,
  "homepage_snapshot_redirected_domain": "hanger94.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100822061313id_/http://www.hanger94.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100822061313id_/http%3A//hanger94.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "hanger94.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100814103400id_/http%3A//www.hanger94.com/content-id-6.htm",
  "policy_title": "Privacy Statement",
  "policy_url": "hanger94.com/content-id-6.htm",
  "sha1": "7754d9b0a6780ac344bf4c35deaa400c32eca587",
  "simhash": 846618995212976569,
  "simhash_updated": false,
  "site_hostname": "hanger94.com",
  "site_url": "http://hanger94.com",
  "smog": 15.38,
  "strict_updated": false,
  "timestamp": "20100814103400",
  "word_count": 1550,
  "year": 2010
}

--- a/h/ha/han/hanger94.com.html
+++ b/h/ha/han/hanger94.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hanger94.com privacy policy that was archived on 2010-05-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100529154817id_/http%3A//www.hanger94.com/content-id-6.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hanger94.com privacy policy that was archived on 2010-08-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100814103400id_/http%3A//www.hanger94.com/content-id-6.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -259,16 +259,9 @@ Snow Shop</a></div>
 <a href="showitems-dc-87.htm">- Snowboards</a>
 <a href="showitems-dc-88.htm">- Bindings</a>
 <a href="showitems-dc-89.htm">- Boots</a>
-<a href="showitems-dc-101.htm">- Men's Snow</a>
-<a href="showitems-dc-103.htm">- Women's Snow</a>
 <a href="showitems-dc-105.htm">- Board Bags</a>
 <a href="showitems-dc-107.htm">- Belts</a>
-<a href="showitems-dc-108.htm">- Gloves</a>
-<a href="showitems-dc-146.htm">- Stomp Pads</a>
-<a href="showitems-dc-147.htm">- Wax</a>
-<a href="showitems-dc-149.htm">- Tools</a>
 <a href="showitems-dc-55.htm">- Goggles</a>
-<a href="showitems-dc-86.htm">- Clothing</a>
 </span>
 
 <div class="menutitle" onclick="SwitchMenu('sub6')"><a href="#">
@@ -316,6 +309,7 @@ Watches</a></div>
 <div class="menutitle" onclick="SwitchMenu('sub9')"><a href="#">
 EyeWear</a></div>
 <span class="submenu" id="sub9">
+<a href="showitems-dc-165.htm">- Oakley Frogskins</a>
 <a href="showitems-dc-43.htm">- Sunglasses</a>
 </span>
 
@@ -381,10 +375,12 @@ Blog</a></div>
 </div><div style="background-color: #fff; height: 6px; width: 100%"></div>
 <div><img src="/images/leftnav-inner-top.gif" width="197" height="6"></div>
 
-<br>
 
- <div align="center"><a href="http://www.bizrate.com/ratings_guide/cust_reviews__mid--188230.html" target="_blank"><img src="https://medals.bizrate.com/medals/dynamic/188230_medal.gif" alt="BizRate Customer Certified (GOLD) Site - Hanger94.com Reviews at Bizrate" width="125" height="73" align="top" border="0"></a></div>
- <br>
+
+<br>
+<div align="center"><a href="http://www.bizrate.com/ratings_guide/cust_reviews__mid--188230.html" target="_blank">
+<img src="http://hanger94.com/images/metal.jpg" alt="BizRate Customer Certified (GOLD) Site - Hanger94.com Reviews at Bizrate" width="125" height="73" align="top" border="0"></a></div>
+<br>
 
 
 <table width="120" border="0" align="center" cellpadding="0" cellspacing="5">
@@ -404,7 +400,7 @@ Blog</a></div>
 <table width="120" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td><!-- Begin Volusion Live Chat -->
-<div align="center" id="VolusionLiveChat"><a href="http://www.volusion.com/livechat_software.asp">Free Live Chat Software</a></div>
+<div align="center" id="VolusionLiveChat"><a href="http://www.volusion.com/live-chat/software.asp">Free Live Chat Software</a></div>
 <script defer="" type="text/javascript" src="https://livechat.volusion.com/script.aspx?id=352372"></script>
 <!-- End Volusion Live Chat --></td>
   </tr>
